--- a/Prototype/style.css
+++ b/Prototype/style.css
@@ -56,13 +56,13 @@
 }
 
 .login-button {
-    width: 100%;
-    height: 30px;
-    background-color: blue;
+    width: 101%;
+    height: 33px;
+    background-color: #007BFF;
     color: white;
     border-radius: 20px;
     border: 2px;
-    border-color:blue;
+    border-color:#007BFF;
     padding-top: 5px;
     padding-bottom: 5px;
     margin-bottom: 16px;
@@ -70,6 +70,25 @@
 
 .signup {
     text-align: end;
+}
+
+.separator {
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+/* Sign up */
+.signup-info{
+    right: 0;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.filler-signup {
+    left: 0;
+    background-color: purple;
 }
 
 /*               */
