--- a/Prototype/home.css
+++ b/Prototype/home.css
@@ -1,6 +1,5 @@
 body {
     margin:0;
-    background-color:rgb(197, 197, 241);
 }
 
 h1{
@@ -13,62 +12,71 @@ h1{
     list-style-type: none;
     padding: 0;
     margin:0;
-    height: 100vh;
-    width: 25%;
-    top:10%;
+    height:100%;
+    width: 10%;
     position: fixed;
     overflow: auto;
     text-align: center;
-    background-color:rgb(221, 251, 52);
-    padding-top: 5px;
+    background-color: purple;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.topBar{
-    display: flex;
+.DMs{
     list-style-type: none;
-    justify-content: space-around;
-    margin:0;
-    height: 10%;
-    width:100%;
+    padding: 0;
+    margin: 0;
+    height:100%;
+    width: 25%;
     position: fixed;
-    overflow: auto;
+    overflow:auto;
     text-align: center;
-    top:0;
-    right: 0;
-    background-color:rgb(221, 251, 52);
+    right:0;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
 }
 
-.topBar li a{
-    margin-top: 6px;
-    display: block;
-    overflow: auto;
-    text-decoration: none;
-    color:black;
-    font-size: 20pt;
-    line-height: 50px;
-    background-color:rgb(231, 255, 92);
-    
+h2{
+    text-align: center;
+    font-size: 20 px;
 }
 
 .subjects li a{
-    margin-top: 6px;
     display: block;
-    padding: 10px;
+    padding: 0px;
+    margin: 5px;
     overflow: auto;
     text-decoration: none;
     color:black;
     font-size: 20pt;
-    line-height: 50px;
-    background-color:rgb(231, 255, 92);
+    background-color:rgb(164, 6, 164);
+}
+
+.DMs li{
+    display: flex;
+    border-style: solid;
+    padding: 10px;
+    margin: 5px;
+    overflow: auto;
+    text-decoration: none;
+    color:black;
+    font-size: 20pt;
+    align-items: center;
+    justify-content: space-between;
+}
+li img{
+    max-width: 50px;
+    border-radius: 100px;
+}
+
+.DMs li p, .DMs li a{
+    font-size: 20px;
+    text-decoration: none;
+    color:black;
 }
 
 .pageContent{
-    margin-left: 25%;
+    margin-left: 10%;
+    margin-right: 25%;
     padding: 16px;
-    padding-top: 75px;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
