--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Feed</title>
-    <link rel="stylesheet" type="text/css" href="feed.css">
+    <link rel="stylesheet" type="text/css" href="/public/feed.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -51,10 +51,10 @@
 
                 <div class="post">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header" style="background-color: rgb(8, 169, 233);">
                             <h2>Post Title</h2>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" >
                             <p>Post content goes here.</p>
 
                             <div class="d-flex justify-content-end align-items-center me-4">
