--- a/Prototype/views/style.css
+++ b/Prototype/views/style.css
@@ -100,3 +100,11 @@
 body {
     font-family: 'Times New Roman', Times, serif;
 }
+
+.back-button {
+    float: right;
+    border-radius: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 16px;
+}
