added more styling to login and signup

--- a/Prototype/views/Login.html
+++ b/Prototype/views/Login.html
@@ -18,7 +18,8 @@
     <div class="split login">
         <div class="login-content">
             <h1 class="login-title">Spartan-Aid</h2>
-            <p>Enter login details below</p>
+                <img class="spartan" src="../images/Spartan.png" alt="spartan">
+            <p style="font-weight: bold;">Enter login details below:</p>
 
             <form action="./home.html">
                 <div class="login-form">
