--- a/Prototype/views/signup.html
+++ b/Prototype/views/signup.html
@@ -19,10 +19,11 @@
         
         <div class="login-content">
             <div><button class="back-button" onclick="history.back()">Back</button></div>
-            <h1 class="login-title">Spartan-Aid</h2>
-                <p>Enter sign up information below</p>
+            <h1 class="login-title">Sign Up</h2>
+                <img class="spartan" src="../images/Spartan.png" alt="Spartan">
+                <p style="font-weight: bold;">Enter sign up information below:</p>
 
-                <form action="./login.html" method="post">
+                <form action="/signup" method="post">
                     <div class="login-form">
                         <!-- email -->
                         <div class="email">
@@ -53,7 +54,7 @@
                                 <option value="teacher">Teacher</option>
                             </select><br><br>
                         </div>
-                        <button class="login-button">Sign up</button>
+                        <button class="login-button" type="submit">Sign up</button>
                 </form>
 </body>
 
