--- a/Prototype/views/home.html
+++ b/Prototype/views/home.html
@@ -42,10 +42,31 @@
 
         </ul>
     </nav>
+
+    <nav>
+        <ul class="topBar">
+            <li><a href="home.html"><h2>Spartan Aid</h2></a></li>
+            <li><a href="home.html"><h2>Messages</h2></a></li>
+            <li><a href="home.html"><h2>Account</h2></a></li>
+            <li><a href="home.html"><h2>Logout</h2></a></li>
+        </ul>
+    </nav>
     <ul class="DMs">
         <h2>Messages</h2>
         <li>
-            <img src="/images/blank-pf.png" alt="profile-pic">
+            <img src="/Prototype/images/blank-pf.png" alt="profile-pic">
+            <a href="#">UserName</a>
+            <p> # of new notifications</p>
+
+        </li>
+        <li>
+            <img src="/Prototype/images/blank-pf.png" alt="profile-pic">
+            <a href="#">UserName</a>
+            <p> # of new notifications</p>
+
+        </li>
+        <li>
+            <img src="/Prototype/images/blank-pf.png" alt="profile-pic">
             <a href="#">UserName</a>
             <p> # of new notifications</p>
 
