--- a/Prototype/views/login.ejs
+++ b/Prototype/views/login.ejs
@@ -41,13 +41,16 @@
 
             <div class="separator">Or</div>
 
-            <script src="https://accounts.google.com/gsi/client" async></script>
+            <!-- <script src="https://accounts.google.com/gsi/client" async></script>
             <div id="g_id_onload" data-client_id="YOUR_GOOGLE_CLIENT_ID"
                 data-login_uri="https://your.domain/your_login_endpoint" data-auto_prompt="false">
             </div>
             <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline"
                 data-text="sign_in_with" data-shape="rectangular" data-logo_alignment="left">
-            </div>
+            </div> -->
+
+            <a href="/auth/google"><button class="btn">Login with Google</button></a>
+
 
             <p class="signup">Dont have an account? <a href="/signup">Sign up</a></p>
         </div>
@@ -74,7 +77,7 @@
     </div>
   </div>
 
-  <a href="/auth/google"><button class="btn">Jamin's Login with Google Button</button></a>
+  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
