--- a/Prototype/views/modTutor.html
+++ b/Prototype/views/modTutor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="mod.css" >
-    <title>Posts</title>
+    <title>Tutors</title>
 </head>
 <body>
     <nav>
@@ -54,10 +54,20 @@
             <li><a href="#"><h2>Logout</h2></a></li>
         </ul>
     </nav>
-    <ul class="flaggedPostList">
-        <li><h2>Flagged Posts</h2></li>
+    <ul class="tutorList">
+        <li><h2>Tutor Applications</h2></li>
         <li>
-            <div class="flaggedPost">
+            <div class="tutorApp">
+                <a href="#"> UserName </a>
+                <p>Application text given by </p>
+                <p>Reason for Flag</p>
+                <button class="unflagUser">Delete</button>
+                <button class="deleteUser">Unflag</button>
+                <button class="flagUser">Flag User</button>
+            </div>
+        </li>
+        <li>
+            <div class="flaggedUser">
                 <a href="#"> Post Topic </a>
                 <p>Post Content</p>
                 <p>Reason for Flag</p>
@@ -67,17 +77,7 @@
             </div>
         </li>
         <li>
-            <div class="flaggedPost">
-                <a href="#"> Post Topic </a>
-                <p>Post Content</p>
-                <p>Reason for Flag</p>
-                <button class="deletePost">Delete</button>
-                <button class="unflagPost">Unflag</button>
-                <button class="flagUser">Flag User</button>
-            </div>
-        </li>
-        <li>
-            <div class="flaggedPost">
+            <div class="flaggedUser">
                 <a href="#"> Post Topic </a>
                 <p>Post Content</p>
                 <p>Reason for Flag</p>
