--- a/Prototype/views/modHome.html
+++ b/Prototype/views/modHome.html
@@ -50,6 +50,7 @@
             <li><a href="#"><h2>Account</h2></a></li>
             <li><a href="modUsers.html"><h2>Users</h2></a></li>
             <li><a href="modPosts.html"><h2>Posts</h2></a></li>
+            <li><a href="modTutor.html"><h2>Tutors</h2></a></li>
             <li><a href="#"><h2>Logout</h2></a></li>
         </ul>
     </nav>
