--- a/Prototype/views/modUsers.html
+++ b/Prototype/views/modUsers.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="modUsers.css" >
-    <title>Home</title>
+    <link rel="stylesheet"  href="mod.css" >
+    <title>Users</title>
 </head>
 <body>
     <nav>
