--- a/Prototype/views/modTutor.html
+++ b/Prototype/views/modTutor.html
@@ -59,31 +59,28 @@
         <li>
             <div class="tutorApp">
                 <a href="#"> UserName </a>
-                <p>Application text given by </p>
-                <p>Reason for Flag</p>
-                <button class="unflagUser">Delete</button>
-                <button class="deleteUser">Unflag</button>
-                <button class="flagUser">Flag User</button>
+                <p>Application text given by tutor</p>
+                <a class="reviewLink" href="#">Reviews <br> </a>
+                <button class="acceptTutor">Accept</button>
+                <button class="denyTutor">Deny</button>
             </div>
         </li>
         <li>
-            <div class="flaggedUser">
-                <a href="#"> Post Topic </a>
-                <p>Post Content</p>
-                <p>Reason for Flag</p>
-                <button class="deletePost">Delete</button>
-                <button class="unflagPost">Unflag</button>
-                <button class="flagUser">Flag User</button>
+            <div class="tutorApp">
+                <a href="#"> UserName </a>
+                <p>Application text given by tutor</p>
+                <a class="reviewLink" href="#">Reviews <br> </a>
+                <button class="acceptTutor">Accept</button>
+                <button class="denyTutor">Deny</button>
             </div>
         </li>
         <li>
-            <div class="flaggedUser">
-                <a href="#"> Post Topic </a>
-                <p>Post Content</p>
-                <p>Reason for Flag</p>
-                <button class="deletePost">Delete</button>
-                <button class="unflagPost">Unflag</button>
-                <button class="flagUser">Flag User</button>
+            <div class="tutorApp">
+                <a href=s"#"> UserName </a>
+                <p>Application text given by tutor</p>
+                <a class="reviewLink" href="#">Reviews <br> </a>
+                <button class="acceptTutor">Accept</button>
+                <button class="denyTutor">Deny</button>
             </div>
         </li>
     </ul>
