added login functionality

--- a/Prototype/views/login.ejs
+++ b/Prototype/views/login.ejs
@@ -22,7 +22,7 @@
                 <img class="spartan" src="../images/Spartan.png" alt="spartan">
             <p style="font-weight: bold;">Enter login details below:</p>
 
-            <form action="./home.html">
+            <form action="/login" method="post">
                 <div class="login-form">
                     <!-- email -->
                     <div class="email">
