--- a/Prototype/public/feed.css
+++ b/Prototype/public/feed.css
@@ -1,19 +1,46 @@
-.columns {
-    display: flex;
-    justify-content: space-between;
-}
-
 a:link {
     color: #1ac5d1;
     text-decoration: none;
 }
 
-#categories, #feed, #private-messages {
+body {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    height: 120px; 
+}
+
+/* main {
+    margin-top: 60px;
+} */
+
+.columns {
+    display: flex;
+    justify-content: space-between;
+}
+.user-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#feed, #private-messages {
     flex: 1;
     margin: 0 10px;
+    margin-inline-start: 12%;
 }
 
 #feed {
     flex: 2;
 }
 
+#comments {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
