--- a/Prototype/public/home.css
+++ b/Prototype/public/home.css
@@ -90,10 +90,10 @@ h2{
     align-items: center;
     justify-content: space-between;
 }
-li img{
+/* li img{
     max-width: 50px;
     border-radius: 100px;
-}
+} */
 
 .DMs li p, .DMs li a{
     font-size: 20px;
