--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -3,17 +3,23 @@
     <title>Feed</title>
     <link rel="stylesheet" type="text/css" href="/public/feed.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/public/home.css">
 </head>
+
+<header>
+    <%- include('partials/navbar') %>
+</header>
+
 <body>
     <div class="columns">
-        <div id="categories">
+        <!-- <div id="categories">
             <h1>Categories</h1>
             <ul class="list-group">
                 <li class="list-group-item"> <a href="#">Category 1</a> </li>
                 <li class="list-group-item"> <a href="#">Category 2</a> </li>
                 
             </ul>
-        </div>    
+        </div>     -->
     
 
         <div id="feed">
@@ -31,8 +37,9 @@
 
                             <div class="d-flex justify-content-end align-items-center me-4">
                                 <div class="d-flex align-items-center me-4">
-                                    <button type="button" class="btn btn-link p-0 border-0 me-2">
+                                    <button type="button" class="btn btn-link p-0 border-0 me-2" onclick="toggleCommentBox">
                                         <img src="/images/comment.png" alt="Comment" width="30" height="30">
+
                                     </button>
                                     <div class="text-muted small">0 comments</div>
                                 </div>
@@ -83,8 +90,8 @@
         <div id="private-messages">
             <h1>Private Messages</h1>
 
-            <ul class="list-group">
-                <li class="list-group-item"> 
+            <ul class="users">
+                <li class="user-info"> 
                     <a href="#">
                         <img src="/images/blank-pf.png" class="rounded-circle" alt="profile" size="50" height="50" width="50">
                         <span>Username</span>
@@ -93,7 +100,7 @@
                     <button type="button" class="btn btn-primary">Message</button>
                 </li>
                 <br>
-                <li class="list-group-item"> 
+                <li class="user-info"> 
                     <a href="#">
                         <img src="/images/blank-pf.png" class="rounded-circle" alt="profile" size="50" height="50" width="50">
                         <span>Username</span>
