--- a/Prototype/public/feed.css
+++ b/Prototype/public/feed.css
@@ -3,23 +3,25 @@ a:link {
     text-decoration: none;
 }
 
-body {
+/* body {
     margin: 0;
     padding: 0;
-}
+} */
 
-header {
+/* header {
     height: 120px; 
-}
+    margin-bottom: 20px;
+} */
 
 /* main {
     margin-top: 60px;
 } */
 
-.columns {
+/* .columns {
     display: flex;
     justify-content: space-between;
-}
+    margin-inline-start: 12%;
+} */
 .user-info{
     display: flex;
     align-items: center;
@@ -32,7 +34,7 @@ header {
 #feed, #private-messages {
     flex: 1;
     margin: 0 10px;
-    margin-inline-start: 12%;
+    /* margin-inline-start: 12%; */
 }
 
 #feed {
@@ -44,3 +46,4 @@ header {
     flex-direction: column;
     align-items: center;
 }
+
