--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -24,7 +24,7 @@
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
             <li><a href="#"><h2>Spartan Aid</h2></a></li>
             <li><a href="#"><h2>Messages</h2></a></li>
-            <li><a href="#"><h2>Account</h2></a></li>
+            <li><a href="/account"><h2>Account</h2></a></li>
             <li><a href="#"><h2>Logout</h2></a></li>
         <% } else if (role === 'tutor') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
@@ -43,3 +43,7 @@
     
     </ul>
 </nav>
+<br>
+<br>
+<br>
+<br>
