--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -1,16 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Feed</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/public/feed.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/public/home.css">
 </head>
 
-<header>
-    <%- include('partials/navbar') %>
-</header>
+
 
 <body>
+    <header>
+        <%- include('partials/navbar') %>
+    </header>
+
     <div class="columns">
         <!-- <div id="categories">
             <h1>Categories</h1>
