completed signup verification process

--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -45,10 +45,10 @@
 
     <nav>
         <ul class="topBar">
-            <li><a href="home.html"><h2>Spartan Aid</h2></a></li>
-            <li><a href="home.html"><h2>Messages</h2></a></li>
-            <li><a href="home.html"><h2>Account</h2></a></li>
-            <li><a href="home.html"><h2>Logout</h2></a></li>
+            <li><a href="/home"><h2>Spartan Aid</h2></a></li>
+            <li><a href="#"><h2>Messages</h2></a></li>
+            <li><a href="/logout"><h2>Logout</h2></a></li>
+            <li><a href="#"><h2>Account</h2></a></li>
         </ul>
     </nav>
     <ul class="DMs">
