--- a/Prototype/views/account.ejs
+++ b/Prototype/views/account.ejs
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet"  href="/public/home.css" >
     <link rel="stylesheet"  href="/public/account.css" >
+    <script src="/public/script.js" defer></script>
         
     <title>Home</title>
 </head>
@@ -18,14 +19,57 @@
         <div id="account">
             <h1>Account Info</h1><br>
             <img src="/images/blank-pf.png" alt="profile" class="profile-image" width="200">
-            <br><br><h2>Jamin Bucur</h2>
-            <h4>Role: Student</h3>
-            <h4>Email: jcbucur@uncg.edu</h3>
+            <br><br><h2><%= user.fname + " " + user.lname %></h2>
+            <h4>Role: <%= user.role %></h3>
+            <h4>Email: <%= user.email %></h3>
+            <!-- Put badges here -->
             
             
         </div>
         <div id="posts">
-                <h1>My Posts</h1>
+            <h1>My Posts</h1>
+            <div id="userPosts">
+                <% userPosts.forEach(post => { %>
+                <div class="card">
+                    <h4 class="ms-3"><%= post.catAbbr + "- " + post.title %></h4>
+                    <div class="card-body" >
+                        <p><%= post.description %></p>
+                        <div class="d-flex justify-content-end align-items-center me-4">
+                            <div class="d-flex align-items-center me-4">
+                                <button type="button" class="btn btn-link p-0 border-0 me-2">
+                                    <img src="/images/comment.png" alt="Comment" width="30" height="30">
+                                </button>
+                                <div class="text-muted small">0 comments</div>
+                            </div>
+                                <div class="d-flex align-items-center me-4">
+                                    
+                                    <button type="submit" id="likeButton" class="btn btn-link p-0 border-0 me-2" onclick="toggleLike(event)">
+                                        <input type="hidden" name="postId" value="<%= post.postId %>">
+                                        <input type="hidden" name="liked" value="<%= post.liked %>">
+                                        <input type="hidden" name="likeCount" value="<%= post.likeCount %>">
+                                        <% if (post.liked) { %>
+                                            <img src="/images/likeClicked.png" alt="Like" width="30" height="30">
+                                        <% } else { %>
+                                            <img src="/images/likeUnclicked.png" alt="Like" width="30" height="30">
+                                        <% } %>
+                                    </button>
+                                    <div class="text-muted small"><%= post.likeCount %> likes</div>
+                                </div>
+                            <div class="d-flex align-items-center">
+                                <button type="button" id="flagButton" class="btn btn-link p-0 border-0 me-2" onclick="toggleFlag(event)">
+                                    <img src="/images/emptyFlag.png" alt="Flag" width="40" height="40">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+                 <br>
+                <% }); %>
+                
+                 
+            </div>
+                    
+                    
         </div>
     
 
