--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
     <ul class="subjects">
         <li> <h2> Subjects</h2></li>
     <% subjects.forEach(function(subject) { %>
-            <li><a class="subjectLink" href=" #"><%= subject.catAbbr %></a></li>
+            <li><a class="subjectLink" href="/feed/<%= subject.catAbbr %>"><%= subject.catAbbr %></a></li>
     <% }); %>
     </ul>
 </nav>
