--- a/Prototype/public/modHome.css
+++ b/Prototype/public/modHome.css
@@ -1,11 +1,24 @@
 body {
     margin:0;
+    padding:0;
 }
 
 h1{
     text-align: center;
     font-size: 45px;
+    font-weight: bolder;
+}
 
+h2{
+    text-align: center;
+    font-size: 20 px;
+}
+
+header {
+    height: 120px; 
+    margin-bottom: 20px;
+    background-color: #07394b;
+    background-size: contain;
 }
 
 .subjects{
@@ -59,13 +72,8 @@ h1{
     text-align: center;
     right:0;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-top: 75px;
 }
 
-h2{
-    text-align: center;
-    font-size: 20 px;
-}
 
 .subjects li a{
     display: block;
@@ -90,7 +98,7 @@ h2{
     align-items: center;
     justify-content: space-between;
 }
-li img{
+.notifications img{
     max-width: 50px;
     border-radius: 100px;
 }
@@ -105,10 +113,15 @@ li img{
     margin-left: 10%;
     margin-right: 25%;
     padding: 16px;
-    padding-top: 75px;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 .pageContent p{
     font-size: 20pt;
+}
+
+.columns {
+    display: flex;
+    justify-content: space-between;
+    margin-inline-start: 12%;
 }
