--- a/Prototype/views/modHome.ejs
+++ b/Prototype/views/modHome.ejs
@@ -3,41 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="/CSC490-CAPSTONE/Prototype/public/modHome.css" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/public/modHome.css">
     <title>Home</title>
 </head>
 <body>
     <header>
         <%- include('partials/navbar') %>
     </header>
-
-    <nav>
-        <ul class="topBar">
-            <li><a href="#"><h2>Spartan Aid</h2></a></li>
-            <li><a href="#"><h2>Messages</h2></a></li>
-            <li><a href="#"><h2>Account</h2></a></li>
-            <li><a href="modUsers.html"><h2>Users</h2></a></li>
-            <li><a href="modPosts.html"><h2>Posts</h2></a></li>
-            <li><a href="modTutor.html"><h2>Tutors</h2></a></li>
-            <li><a href="#"><h2>Logout</h2></a></li>
-        </ul>
-    </nav>
     <ul class="DMs">
         <h2>Messages</h2>
-        <li>
-            <img src="/CSC490-CAPSTONE/Prototype/images/blank-pf.png" alt="profile-pic">
+        <li class="notifications">
+            <img src="/images/blank-pf.png" alt="profile-pic">
             <a href="#">UserName</a>
             <p> # of new notifications</p>
 
         </li>
-        <li>
-            <img src="/CSC490-CAPSTONE/Prototype/images/blank-pf.png" alt="profile-pic">
+        <li class="notifications">
+            <img src="/images/blank-pf.png" alt="profile-pic">
             <a href="#">UserName</a>
             <p> # of new notifications</p>
 
         </li>
-        <li>
-            <img src="/CSC490-CAPSTONE/Prototype/images/blank-pf.png" alt="profile-pic">
+        <li class="notifications">
+            <img src="/images/blank-pf.png" alt="profile-pic">
             <a href="#">UserName</a>
             <p> # of new notifications</p>
 
