--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -13,8 +13,7 @@
 
         <% if (role === 'moderator') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
-            <li><a href="modHome.html"><h2>Spartan Aid</h2></a></li>
-            <li><a href="#"><h2>Spartan Aid</h2></a></li>
+            <li><a href="modHome"><h2>Spartan Aid</h2></a></li>
             <li><a href="#"><h2>Messages</h2></a></li>
             <li><a href="#"><h2>Account</h2></a></li>
             <li><a href="modUsers.html"><h2>Users</h2></a></li>
