--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -4,53 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="../public/home.css" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
-    <nav>
-        <ul class="subjects">
-            <li> <h2> Subjects</h2></li>
-            <li><a class="subjectLink" href=" #">ARS </a></li>
-            <li><a class="subjectLink" href="#">ACC </a></li>
-            <li><a class="subjectLink" href="#"> IAA</a></li>
-            <li><a class="subjectLink" href="#"> ADS</a></li>
-            <li><a class="subjectLink" href="#"> ASL</a></li>
-            <li><a class="subjectLink" href="#"> ATY</a></li>
-            <li><a class="subjectLink" href="#"> APD</a></li>
-            <li><a class="subjectLink" href="#"> ARB</a></li>
-            <li><a class="subjectLink" href="#"> ARC </a></li>
-            <li><a class="subjectLink" href="#"> ART </a></li>
-            <li><a class="subjectLink" href="#"> ARE </a></li>
-            <li><a class="subjectLink" href="#"> ARH </a></li>
-            <li><a class="subjectLink" href="#"> AAD </a></li>
-            <li><a class="subjectLink" href="#"> AST </a></li>
-            <li><a class="subjectLink" href="#"> IAB </a></li>
-            <li><a class="subjectLink" href="#"> BIO </a></li>
-            <li><a class="subjectLink" href="#"> BUS </a></li>
-            <li><a class="subjectLink" href="#"> CHE </a></li>
-            <li><a class="subjectLink" href="#"> CHI </a></li>
-            <li><a class="subjectLink" href="#"> CCI </a></li>
-            <li><a class="subjectLink" href="#"> CSD </a></li>
-            <li><a class="subjectLink" href="#"> CST </a></li>
-            <li><a class="subjectLink" href="#"> CTR </a></li>
-            <li><a class="subjectLink" href="#"> CTP </a></li>
-            <li><a class="subjectLink" href="#"> IAC </a></li>
-            <li><a class="subjectLink" href="#"> CSC </a></li>
-            <li><a class="subjectLink" href="#"> CNS </a></li>
-            <li><a class="subjectLink" href="#"> CRS </a></li>
-            <li><a class="subjectLink" href="#"> CED </a></li>
+    <header>
+        <%- include('partials/navbar') %>
+    </header>
 
-        </ul>
-    </nav>
-
-    <nav>
-        <ul class="topBar">
-            <li><a href="/home"><h2>Spartan Aid</h2></a></li>
-            <li><a href="#"><h2>Messages</h2></a></li>
-            <li><a href="/logout"><h2>Logout</h2></a></li>
-            <li><a href="#"><h2>Account</h2></a></li>
-        </ul>
-    </nav>
     <ul class="DMs">
         <h2>Messages</h2>
         <li>
