--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
     <ul class="subjects">
         <li> <h2> Subjects</h2></li>
     <% subjects.forEach(function(subject) { %>
-            <li><a class="subjectLink" href="/<%= subject.catAbbr %>?catId=<%= subject.catId %>"><%= subject.catAbbr %></a></li>
+            <li><a class="subjectLink" href="/category/<%= subject.catAbbr %>?catId=<%= subject.catId %>"><%= subject.catAbbr %></a></li>
             
     <% }); %>
     </ul>
@@ -30,15 +30,15 @@
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
             <li><a href="#"><h2>Spartan Aid</h2></a></li>
             <li><a href="#"><h2>Messages</h2></a></li>
-            <li><a href="#"><h2>Account</h2></a></li>
+            <li><a href="/account"><h2>Account</h2></a></li>
             <li><a href="/logout"><h2>Logout</h2></a></li>
         <% } else if (role === 'teacher') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
             <li><a href="#"><h2>Spartan Aid</h2></a></li>
             <li><a href="#"><h2>Messages</h2></a></li>
             <li><a href="#"><h2>Study Resources</h2></a></li>
-            <li><a href="#"><h2>Account</h2></a></li>
-            <li><a href="/logout">Logout<h2></h2></a></li>
+            <li><a href="/account"><h2>Account</h2></a></li>
+            <li><a href="/logout"><h2>Logout</h2></a></li>
         <% } %>
     
     </ul>
