--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -22,19 +22,19 @@
             <li><a href="/logout"><h2>Logout</h2></a></li>
         <% } else if (role === 'student') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
-            <li><a href="#"><h2>Spartan Aid</h2></a></li>
+            <li><a href="/home"><h2>Spartan Aid</h2></a></li>
             <li><a href="#"><h2>Messages</h2></a></li>
             <li><a href="/account"><h2>Account</h2></a></li>
             <li><a href="/logout"><h2>Logout</h2></a></li>
         <% } else if (role === 'tutor') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
-            <li><a href="#"><h2>Spartan Aid</h2></a></li>
+            <li><a href="/home"><h2>Spartan Aid</h2></a></li>
             <li><a href="#"><h2>Messages</h2></a></li>
             <li><a href="/account"><h2>Account</h2></a></li>
             <li><a href="/logout"><h2>Logout</h2></a></li>
         <% } else if (role === 'teacher') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
-            <li><a href="#"><h2>Spartan Aid</h2></a></li>
+            <li><a href="/home"><h2>Spartan Aid</h2></a></li>
             <li><a href="#"><h2>Messages</h2></a></li>
             <li><a href="#"><h2>Study Resources</h2></a></li>
             <li><a href="/account"><h2>Account</h2></a></li>
